--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-light"
             style="background-color: #eecc0a;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">We Got You Covered</a>
+                <a class="navbar-brand" href="#">We've Got You Covered</a>
                 <button class="navbar-toggler" type="button"
                     data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                     aria-controls="navbarScroll" aria-expanded="false"
@@ -74,7 +74,7 @@
             <div class="row">
                 <div class="col-12 header text-center heading-text">
                     <h2 class="display-4" style="margin-top: 15px">Pantry Raider</h2>
-                    <p>Whats in your pantry?</p>
+                    <p>What's in your pantry?</p>
                 </div>
             </div>
         </div>
